src/sap.ui.mdc/src/sap/ui/mdc/themes/base/TokenDisplay.less
/* ======================================== */
/* CSS for control sap.ui.mdc/TokenDisplay  */
/* Base theme                               */
/* ======================================== */

@mdctoken-large-line-height: 1.375rem;
@mdctoken-small-line-height: 1rem;

/* hide Token border and background */
.sapUiMdcTokenizerDisplay .sapMToken {
	border: 0; /* hide the border of a token */
	background-color: transparent; /* remove background of Token */
	padding-left: 0; /* remove the left padding */
}

.sapUiMdcTokenizerDisplay.sapMTokenizer.sapMTokenizerReadonly .sapMToken {
	padding-left: 0; /* remove left padding of a token. The right padding will be used to show the delimiters */

	/* right margin and padding of the token (space for the delimiter) */
	padding-right: 0.375rem;
	margin-right: 0.375rem;
	margin-top: 0;
	margin-bottom: 0;
	color: var(--sapTextColor);
	height: @mdctoken-small-line-height;
}

.sapUiFormEdit .sapUiMdcTokenizerDisplay.sapMTokenizer.sapMTokenizerReadonly .sapMToken {
	height: @mdctoken-large-line-height;
}

.sapUiSizeCozy {
	.sapUiMdcTokenizerDisplay.sapMTokenizer.sapMTokenizerReadonly .sapMToken {
		/* right margin and padding of the token (space for the delimiter) */
		padding-right: 0.5rem;
		margin-right: 0.5rem;
	}

	.sapUiForm:not(.sapUiFormEdit) .sapUiMdcTokenizerDisplay.sapMTokenizer.sapMTokenizerReadonly .sapMToken {
		padding-top: 0;
	}
}

/* delimiters between tokens */
.sapUiMdcTokenizerDisplay .sapMToken::after {
	content: attr(delimiter);
	color: var(--sapTextColor);
	font-family: var(--sapFontFamily);
	font-size: @sapMFontMediumSize;
	font-weight: normal;
	vertical-align: middle;
	margin-left: 0.25rem; /* space between tokens. the left margin of the delimiter and the right side of the token */
	position: absolute;
	line-height: @mdctoken-small-line-height;
}

.sapUiSizeCozy {
	.sapUiMdcTokenizerDisplay .sapMToken::after {
		margin-left: 0.4rem; /* space between tokens. the left side margin of the token */
	}

	.sapUiFormEdit .sapUiMdcTokenizerDisplay .sapMToken::after {
		padding-top: 0.125rem;
	}
}

/* no delimiter after the last token */
.sapUiMdcTokenizerDisplay .sapMToken:last-child::after {
	content: none;
}

/* make the token focus invisible */
html.sap-desktop .sapUiMdcTokenizerDisplay .sapMToken:focus {
	outline: 0;
}

/* make the token hover invisible */
html.sap-desktop .sapUiMdcTokenizerDisplay .sapMToken:hover {
	background: transparent;
	border: 0;
}

.sapUiSizeCompact .sapUiMdcTokenizerDisplay.sapMTokenizer .sapMToken {
	font-size: @sapMFontMediumSize;
}

.sapUiMdcTokenizerDisplay .sapMTokenText {
	/* enable selection of scrollcontainer */
    user-select: text;
	line-height: @mdctoken-small-line-height;
}

.sapUiFormEdit .sapUiMdcTokenizerDisplay .sapMTokenText {
	line-height: @mdctoken-large-line-height;
}

